Fixing unit test warnings (#296)
* Fixing unit test warnings

* Fixing coin page layout